applications/monitoring/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-prometheus
  namespace: monitoring
spec:
  hostnames:
    - prometheus-salaserver.linuxadmin.eu
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: monitoring-kube-prometheus-prometheus
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
